src/objects/Astrum_Template__c.object
<CustomObject>
    <description>Document templates including permits, grant applications</description>
    <fields>
        <fullName>Bin__c</fullName>
        <description>Astrum PM Bin</description>
        <label>Bin</label>
        <picklist>
            <picklistValues>
                <fullName>Kickoff Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Conduit Run and Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Prep Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA Submitted Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice at Start of Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel and Inverter Serial Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Warranty Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Map</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Bin__c</controllingField>
            <picklistValues>
                <fullName>Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Photo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB Panel, Interconnect, Disconnect Box Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning and Production Verification Checklists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit (Roof, Interior, Exterior) Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit Run and Layout - Customer Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Materials Photo (NRG only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Drawings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit Package</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>County-related document</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipName>Astrum_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Design</label>
        <referenceTo>Form_Design__c</referenceTo>
        <relationshipLabel>Templates</relationshipLabel>
        <relationshipName>Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Municipal-level template</inlineHelpText>
        <label>Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipName>Astrum_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommendation_Category__c</fullName>
        <inlineHelpText>Recommended Category</inlineHelpText>
        <label>Recommendation Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Note__c</fullName>
        <label>Recommendation Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>State-level template</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>Astrum_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bin__c</columns>
        <columns>Category__c</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>